Create structure for tenant routes
